testdata/baselines/reference/submodule/compiler/pathMappingBasedModuleResolution5_node.errors.txt
c:/root/tsconfig.json(3,9): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./*"}' instead.
c:/root/tsconfig.json(6,17): error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
c:/root/tsconfig.json(7,17): error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
c:/root/tsconfig.json(10,21): error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?


==== c:/root/tsconfig.json (4 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./*"}' instead.
                "paths": {
                "*": [
                    "*",
                    ~~~
!!! error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
                    "generated/*"
                    ~~~~~~~~~~~~~
!!! error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
                ],
                    "components/*": [
                        "shared/components/*"
                        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
                    ]
            }
        }
    }
==== c:/root/folder1/file1.ts (0 errors) ====
    import {x} from "folder2/file1"
    import {y} from "folder3/file2"
    import {z} from "components/file3"
    import {z1} from "file4"
    
    declare function use(a: any): void;
    
    use(x.toExponential());
    use(y.toExponential());
    use(z.toExponential());
    use(z1.toExponential());
    
==== c:/root/folder2/file1.ts (0 errors) ====
    export var x = 1;
    
==== c:/root/generated/folder3/file2.ts (0 errors) ====
    export var y = 1;
    
==== c:/root/shared/components/file3/index.d.ts (0 errors) ====
    export var z: number;
    
==== c:/node_modules/file4.ts (0 errors) ====
    export var z1 = 1;
    